[FIX] Fixed sidebar behavious when screen height is too low, fixed shadow area around the playlist cover in the playlist bonus 5 page

--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,10 @@ footer{
 
 .sidebar{
     width: 250px;
-    height: 100%;
+    /* max-height: 100%; */
     background-color: #000;
     /* z-index: -1; */
+    overflow-y: auto;
 }
 
 .content{
@@ -434,7 +435,7 @@ header .button{
 .playlist-cover img{
     width: 100%;
     border-radius: 5px;
-    box-shadow: 15px 5px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 40px 10px rgba(0,0,0,0.5)
 }
 .playlist-info{
     width: calc(100% - 300px);
